--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 bot
 tz1UY4wLzQDma55Gx73be6upye3YLCn5B4z6.json
+tz1ehbSKVXtEyoApKVzSrm49TW3SEf84zqCm.json
+tz1Np4KGREKgk23tiGaxZkSPzQQXBhUWqswL.json
+tz1SBw5mwuRbzfGaWuUcvSqZQrCHnxVJcXYt.json
+tz1W8Ps3xGejyYD7RhFwEW17w58f7SVdkakG.json
+tz1YpnwZfXBFkNC4XZFTi2LYX8maQRisa4W3.json
+tz1ZUvF3jL5bynt9jnHUxpY8x2nMzbPgHqNg.json
+cogs/__pycache__
