--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@ tz1SBw5mwuRbzfGaWuUcvSqZQrCHnxVJcXYt.json
 tz1W8Ps3xGejyYD7RhFwEW17w58f7SVdkakG.json
 tz1YpnwZfXBFkNC4XZFTi2LYX8maQRisa4W3.json
 tz1ZUvF3jL5bynt9jnHUxpY8x2nMzbPgHqNg.json
+tz1TY3PkZ8gcQZ7BSzu2A7zYj5pqvgx2UUVy.json
 cogs/__pycache__
